# curl-history

./: .env  .gitignore  Cargo.toml  README.md  build.rs  curl-history.plugin.zsh  curl-history.sh
migrations/: 20210622211304_create-history-table.sql
src/: capturing_writer.rs  curl.rs  db.rs  history.rs  main.rs
